--- a/nodejs.yml
+++ b/nodejs.yml
@@ -1,7 +1,7 @@
-- name: configuring NodeJs repos
+- name: install nodejs
   ansible.builtin.shell: curl -sL https://rpm.nodesource.com/setup_lts.x | bash
 
-- name: install NodeJs
+- name: install nodejs
   ansible.builtin.yum:
     name: nodejs
     state: installed
