--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -6,4 +6,4 @@
 - name: load schema setup
   ansible.builtin.import_role:
     name: common
-    tasks_from: mongo_schema_setup
+    tasks_from: mongodb_schema_setup
