--- a/roles/common/tasks/maven.yml
+++ b/roles/common/tasks/maven.yml
@@ -16,6 +16,6 @@
     file: mysql_schema_setup.yml
 
 - name: systemd setup
-  ansible:builtin.import_tasks:
+  ansible.builtin.import_tasks:
     file: systemd_setup.yml
 
