--- a/roles/common/tasks/maven.yml
+++ b/roles/common/tasks/maven.yml
@@ -7,7 +7,8 @@
   ansible.builtin.import_tasks:
     file: app_presetup.yml
 - name: download maven dependencies
-  ansible.builtin.shell: mvn clean package; mv target/{{component}}-1.0.jar shipping.jar {{component}}.jar
+  ansible.builtin.shell: mvn clean package; 
+     mv target/{{component}}-1.0.jar  {{component}}.jar
   args:
     chdir: /app
 
