--- a/roles/fronted/files/roboshop.conf
+++ b/roles/fronted/files/roboshop.conf
@@ -4,11 +4,11 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass http://172.31.86.150:8080/; }
-location /api/user/ { proxy_pass http://172.31.93.88:8080/; }
-location /api/cart/ { proxy_pass http://172.31.83.213:8080/; }
-location /api/shipping/ { proxy_pass http://172.31.88.19:8080/; }
-location /api/payment/ { proxy_pass http://172.31.93.225:8080/; }
+location /api/catalogue/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.dev.fronted.catalogue_url', region= 'us-east-1') }}; }
+location /api/user/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.dev.fronted.user_url', region= 'us-east-1') }}; }
+location /api/cart/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.dev.fronted.cart_url', region= 'us-east-1') }}; }
+location /api/shipping/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.dev.fronted.payment_url', region= 'us-east-1') }}; }
+location /api/payment/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.dev.fronted.shipping_url', region= 'us-east-1') }}; }
 
 location /health {
   stub_status on;
