--- a/roles/fronted/templates/roboshop.conf
+++ b/roles/fronted/templates/roboshop.conf
@@ -4,11 +4,11 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.dev.fronted.catalogue_url', region= 'us-east-1')}}; }
-location /api/user/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.dev.fronted.user_url', region= 'us-east-1') }}; }
-location /api/cart/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.dev.fronted.cart_url', region= 'us-east-1') }}; }
-location /api/shipping/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.dev.fronted.payment_url', region= 'us-east-1') }}; }
-location /api/payment/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.dev.fronted.shipping_url', region= 'us-east-1') }}; }
+location /api/catalogue/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.fronted.catalogue_url', region= 'us-east-1')}}; }
+location /api/user/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.fronted.user_url', region= 'us-east-1') }}; }
+location /api/cart/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.fronted.cart_url', region= 'us-east-1') }}; }
+location /api/shipping/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.fronted.payment_url', region= 'us-east-1') }}; }
+location /api/payment/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.fronted.shipping_url', region= 'us-east-1') }}; }
 
 location /health {
   stub_status on;
